package aula10_exercicio;

public interface OperacaoEstoque {
    void realizarOperacao();
}
